Agrego time features y info de users a predecir
Agrego time features y info de users a predecir (cuantos usuarios se pierden cuando filtramos por evento)

--- a/src/Santi - Veo si al filtrar por un evento perdemos usuarios a predecir..ipynb
+++ b/src/Santi - Veo si al filtrar por un evento perdemos usuarios a predecir..ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -60,27 +69,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(19414, 2)"
+       "0    18434\n",
+       "1      980\n",
+       "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_labels.shape"
+    "df_labels['label'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.316263426277531"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dato adicional, solo el 5% de las personas con labels hace una compra.\n",
+    "(980/18434)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -104,81 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4886f805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0297fc1e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2d681dd8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cccea85e</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4c8a8b93</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     person\n",
-       "0  4886f805\n",
-       "1  0297fc1e\n",
-       "2  2d681dd8\n",
-       "3  cccea85e\n",
-       "4  4c8a8b93"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_person.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +145,7 @@
        "(19414, 2)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +166,7 @@
        "(19415, 1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,28 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(38829, 27)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Personas con labels + personas sin labels.\n",
-    "df_events.drop_duplicates(subset = 'person').shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -252,18 +189,19 @@
        "38829"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Personas con labels + personas sin labels.\n",
     "19414 + 19415"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,18 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_events = df_events.drop_duplicates(subset = 'person')"
+    "df_events = df_events.drop_duplicates(subset = ['person','event'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,16 +240,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "viewed_product_checkout = df_events[(df_events['event'] == 'viewed product') | (df_events['event'] == 'checkout')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(19415, 27)"
+       "(34941,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewed_product_checkout['event'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(116453, 23)"
+      ]
+     },
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9569, 27)"
+       "(18560, 23)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 27)"
+       "(9631, 23)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10, 27)"
+       "(19116, 23)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -391,10 +358,10 @@
     {
      "data": {
       "text/plain": [
-       "(3917, 27)"
+       "(16012, 23)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -413,10 +380,10 @@
     {
      "data": {
       "text/plain": [
-       "(25, 27)"
+       "(12582, 23)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,16 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1040, 27)"
+       "(6574, 23)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
@@ -455,10 +422,10 @@
     {
      "data": {
       "text/plain": [
-       "(2123, 27)"
+       "(13133, 23)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,16 +436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2338, 27)"
+       "(16381, 23)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,16 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(149, 27)"
+       "(2020, 23)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(237, 27)"
+       "(2129, 23)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,16 +496,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 80,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 27)"
+       "(315, 23)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
