Pruebo varias alternativas para mejor hiperparametros.

--- a/src/Santi - Veo si al filtrar por un evento perdemos usuarios a predecir..ipynb
+++ b/src/Santi - Veo si al filtrar por un evento perdemos usuarios a predecir..ipynb
@@ -68,25 +68,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Dato importante:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 191 son positivos (1s) de los 3883 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    18434\n",
-       "1      980\n",
-       "Name: label, dtype: int64"
+       "95.0811228431625"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_labels['label'].value_counts()"
+    "# si el modelo predice todos 0s obtiene un accuracy de\n",
+    "((3883 - 191) / 3883 ) * 100"
    ]
   },
   {
@@ -108,6 +125,28 @@
    "source": [
     "# Dato adicional, solo el 5% de las personas con labels hace una compra.\n",
     "(980/18434)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    18434\n",
+       "1      980\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_labels['label'].value_counts()"
    ]
   },
   {
