--- a/src/Santi - Prueba una cosa.ipynb
+++ b/src/Santi - Prueba una cosa.ipynb
@@ -29,13 +29,13 @@
    "outputs": [],
    "source": [
     "# df_events información de eventos realizado en la plataforma para un conjunto de usuarios hasta el 31/05/2018\n",
-    "df_events = pd.read_csv('../../data/events_up_to_01062018.csv',dtype=object)\n",
+    "df_events = pd.read_csv('../data/events_up_to_01062018.csv',dtype=object)\n",
     "# df_train archivo labels_training_set.csv indica para un subconjunto de los usuarios incluidos en el set de \n",
     "# eventos events_up_to_01062018.csv si los mismos realizaron una conversión (columna label = 1) o no (columna \n",
     "# label = 0) desde el 01/06/2018 hasta el 15/06/2018\n",
-    "df_labels = pd.read_csv('../../data/labels_training_set.csv',dtype=object)\n",
+    "df_labels = pd.read_csv('../data/labels_training_set.csv',dtype=object)\n",
     "# Personas a predecir conversion.\n",
-    "df_person = pd.read_csv('../../data/trocafone_kaggle_test.csv')"
+    "df_person = pd.read_csv('../data/trocafone_kaggle_test.csv')"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4  000c79fe      0      0      0      0      1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -395,7 +395,7 @@
        "4  0.00  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -426,7 +426,7 @@
        "(19414, 13)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -634,7 +634,7 @@
        "       silent=True, subsample=1)"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,16 +663,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'XGBRegressor' object has no attribute 'predict_prob'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-d04e5dbc65b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_prob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_predecir_sin_person\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'XGBRegressor' object has no attribute 'predict_prob'"
+     ]
+    }
+   ],
    "source": [
     "preds = pd.DataFrame(xg.predict_proba(df_predecir_sin_person))[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
