--- a/src/Santi - Estudio un poco el set con labels.ipynb
+++ b/src/Santi - Estudio un poco el set con labels.ipynb
@@ -1055,7 +1055,7 @@
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
