agrego csv y corrccion

--- a/src/seba-otros-algoritmos-y-ensamble.ipynb
+++ b/src/seba-otros-algoritmos-y-ensamble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,28 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf_seba_3 = pd.read_csv('../../../features_finales_seba.csv')"
+    "df_features = pd.read_csv('../features_csv/features_finales_seba.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Datos para entrenar\n",
-    "#labels_f = pd.merge(tf_santi,tf_seba_2, on = 'person',how = 'inner')\n",
-    "#labels_f = pd.merge(labels_f,tf_santi_2, on = 'person',how = 'inner')\n",
-    "labels_f = pd.merge( labels, tf_seba_3, on = 'person', how = 'inner')"
+    "\n",
+    "labels_f = pd.merge( df_features, labels, on = 'person', how = 'inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -334,12 +333,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acurracy:  0.8766338291159617\n",
-      "test acurracy:  0.8704609837754314\n",
+      "train acurracy:  0.8790161612259352\n",
+      "test acurracy:  0.872263713623487\n",
       "Matriz de confusión: \n",
-      "[[3276  416]\n",
-      " [  87  104]]\n",
-      "Área bajo la curva:  0.8590833158435105\n"
+      "[[3264  421]\n",
+      " [  75  123]]\n",
+      "Área bajo la curva:  0.8727457752559515\n"
      ]
     }
    ],
@@ -349,18 +348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(label    789\n",
-       " dtype: int64, label    14742\n",
+       "(label    782\n",
+       " dtype: int64, label    14749\n",
        " dtype: int64)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -389,33 +388,24 @@
     }
    ],
    "source": [
-    "prueba_xgboost_oversampling(tf_seba_3, 900)"
+    "prueba_xgboost_oversampling(df_features, 900)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prueba_svc(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acurracy:  0.9492627647929947\n",
-      "test acurracy:  0.950811228431625\n",
+      "train acurracy:  0.9495847015646127\n",
+      "test acurracy:  0.950296162760752\n",
       "Matriz de confusión: \n",
-      "[[3689    3]\n",
-      " [ 188    3]]\n",
-      "Área bajo la curva:  0.8621279631068732\n"
+      "[[3685    0]\n",
+      " [ 193    5]]\n",
+      "Área bajo la curva:  0.8706008524868769\n"
      ]
     }
    ],
@@ -425,19 +415,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acurracy:  0.8563518125040243\n",
-      "test acurracy:  0.8503734226113829\n",
+      "train acurracy:  0.8430236301590368\n",
+      "test acurracy:  0.8411022405356683\n",
       "Matriz de confusión: \n",
-      "[[3185  507]\n",
-      " [  74  117]]\n",
-      "Área bajo la curva:  0.8593102108421775\n"
+      "[[3133  552]\n",
+      " [  65  133]]\n",
+      "Área bajo la curva:  0.8666673519455065\n"
      ]
     }
    ],
@@ -447,19 +437,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acurracy:  0.8157877792801493\n",
-      "test acurracy:  0.8132886943085244\n",
+      "train acurracy:  0.8181057240357994\n",
+      "test acurracy:  0.8174092196755086\n",
       "Matriz de confusión: \n",
-      "[[3031  661]\n",
-      " [  64  127]]\n",
-      "Área bajo la curva:  0.7896839352668569\n"
+      "[[3035  650]\n",
+      " [  59  139]]\n",
+      "Área bajo la curva:  0.813254663322506\n"
      ]
     }
    ],
@@ -469,19 +459,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acurracy:  0.8173974631382397\n",
-      "test acurracy:  0.8212722122070564\n",
+      "train acurracy:  0.8207456055630674\n",
+      "test acurracy:  0.8241050733968581\n",
       "Matriz de confusión: \n",
-      "[[3049  643]\n",
-      " [  51  140]]\n",
-      "Área bajo la curva:  0.8574177647439206\n"
+      "[[3049  636]\n",
+      " [  47  151]]\n",
+      "Área bajo la curva:  0.8682174526814962\n"
      ]
     }
    ],
@@ -498,10 +488,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Área bajo la curva:  0.8756534133739019\n"
+     ]
+    }
+   ],
    "source": [
+    "#Prueba con oversampling\n",
+    "\n",
     "pesos={0: 1, 1: 15}\n",
     "model1 = RandomForestClassifier(n_estimators=16, max_depth=5, random_state=0, class_weight = pesos)\n",
     "\n",
@@ -509,7 +509,12 @@
     "                colsample_bytree = 0.8, learning_rate = 0.1,\n",
     "                max_depth = 5, n_estimators = 6, scale_pos_weight = 7, min_child_weight=15)\n",
     "\n",
-    "df_train = pd.merge(tf_seba_3, labels, on=\"person\", how=\"inner\")\\\n",
+    "\n",
+    "model3 = DecisionTreeClassifier(max_depth=5, random_state=123, class_weight = {0: 1, 1: 10})\n",
+    "model4=  BaggingClassifier(DecisionTreeClassifier(max_depth=5, random_state=0, class_weight = {0: 1, 1: 10}))\n",
+    "model5 = AdaBoostClassifier( learning_rate = 0.1, n_estimators = 100)\n",
+    "\n",
+    "df_train = pd.merge(df_features, labels, on=\"person\", how=\"inner\")\\\n",
     "            .drop(columns = ['person'])\n",
     "    \n",
     "# Separamos la variable a predecir\n",
@@ -523,10 +528,6 @@
     "X_train_res, y_train_res = ros.fit_sample(X_train, y_train)\n",
     "X_train_res_df = pd.DataFrame(X_train_res)\n",
     "X_train_res_df.columns = X_test.columns\n",
-    "\n",
-    "model3 = DecisionTreeClassifier(max_depth=5, random_state=123, class_weight = {0: 1, 1: 10})\n",
-    "model4=  BaggingClassifier(DecisionTreeClassifier(max_depth=5, random_state=0, class_weight = {0: 1, 1: 10}))\n",
-    "model5 = AdaBoostClassifier( learning_rate = 0.1, n_estimators = 100)\n",
     "\n",
     "model1.fit(X_train, y_train)\n",
     "model2.fit(X_train_res_df, y_train_res)\n",
@@ -553,24 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.sum(y_train==1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(y==1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Esto seria para kaggle\n",
+    "\n",
     "pesos={0: 1, 1: 15}\n",
     "model1 = RandomForestClassifier(n_estimators=16, max_depth=5, random_state=0, class_weight = pesos)\n",
     "\n",
@@ -578,10 +563,10 @@
     "                colsample_bytree = 0.8, learning_rate = 0.1,\n",
     "                max_depth = 5, n_estimators = 6, scale_pos_weight = 7, min_child_weight=15)\n",
     "\n",
-    "df_train = pd.merge(tf_seba_3, labels, on=\"person\", how=\"inner\")\\\n",
+    "df_train = pd.merge(df_features, labels, on=\"person\", how=\"inner\")\\\n",
     "            .drop(columns = ['person'])\n",
     "\n",
-    "datos = pd.merge(tf_seba_3, personas, on='person', how='inner').filter(items= list(df_train.columns) + ['person'])\n",
+    "datos = pd.merge(df_features, personas, on='person', how='inner').filter(items= list(df_train.columns) + ['person'])\n",
     "df_final_sin_persons = datos.drop(columns='person')\n",
     "    \n",
     "# Separamos la variable a predecir\n",
@@ -751,7 +736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kaggle_promedio(tf_seba_3)"
+    "kaggle_promedio(df_features)"
    ]
   }
  ],
